links open in same tab

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<a href="" style="text-decoration: none" > </a>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,11 +25,11 @@
 <header>
     <div class="anim3">
     <h3>
-         <a href="https://github.com/PipeWarp">./github.sh</a>
+         <a target="_self" href="https://github.com/PipeWarp">./github.sh</a>
 
-         <a href="https://docs.pipewarp.co.uk">./docs.asm</a>
+         <a target="_self" href="https://docs.pipewarp.co.uk">./docs.asm</a>
 
-         <a href="https://twitter.com/PipeWarpDev">./twitter.bin (i never use it)</a>
+         <a target="_self" href="https://twitter.com/PipeWarpDev">./twitter.bin (i never use it)</a>
     </h3>
     </div>
 
