--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
 </head>
+
 <body>
 <header>
     <div class="anim1">
@@ -19,21 +20,20 @@
     <div class="anim2">
         <h1>pipewarp</h1>
     </div>
+
+        <div class="69420">
+            <a target="_self" class="anim3" href="https://github.com/PipeWarp"> ./github.sh</a>
+            </br>
+            <a target="_self" class="anim4" href="https://docs.pipewarp.co.uk">./docs.asm</a>
+            </br>
+            <a target="_self" class="anim5" href="https://twitter.com/PipeWarpDev">./twitter.bin (i never use it)</a>
+            </br>
+
+        </div>
+
+
+
 </header>
 </body>
-
-<header>
-    <div class="anim3">
-    <h3>
-         <a target="_self" href="https://github.com/PipeWarp">./github.sh</a>
-
-         <a target="_self" href="https://docs.pipewarp.co.uk">./docs.asm</a>
-
-         <a target="_self" href="https://twitter.com/PipeWarpDev">./twitter.bin (i never use it)</a>
-    </h3>
-    </div>
-
-
-</header>
 
 </html>
