made stuff work (centered and stuff)

--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
         <h1>pipewarp</h1>
     </div>
 
-        <div class="69420">
-            <a target="_self" class="anim3" href="https://github.com/PipeWarp"> ./github.sh</a>
-            </br>
-            <a target="_self" class="anim4" href="https://docs.pipewarp.co.uk">./docs.asm</a>
-            </br>
-            <a target="_self" class="anim5" href="https://twitter.com/PipeWarpDev">./twitter.bin (i never use it)</a>
-            </br>
-
-        </div>
+        
 
 
 
 </header>
+<div class="list">
+    <div class="listin">
+    <a target="_self" class="anim3" href="https://github.com/PipeWarp"> ./github.sh</a>
+    </br>
+    <a target="_self" class="anim4" href="https://docs.pipewarp.co.uk">./docs.asm</a>
+    </br>
+    <a target="_self" class="anim5" href="https://twitter.com/PipeWarpDev">./twitter.bin (i never use it)</a>
+    </br>
+    </div>
+
+</div>
 </body>
 
 </html>
