--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br><br>
     <a target="_self" class="anim5" href="https://vtc.pipewarp.co.uk">./vtc-site.html</a>
     <br><br>
-    <a target="_self" class="anim5" href="https://twitter.com/PipeWarpDev">./twitter.bin (i never use it)</a>
+    <a target="_self" class="anim5" href="https://twitter.com/PipeWarpDev">./twitter.bin</a>
 
 
     </div>
