--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 <header>
     <div class="anim1">
-        <h1>root@pipewarp.co.uk
+        <h1>root@kbx.codes
         <span class="white">:/$
         <span class="typing"></span></span>
         </h1>
     </div>
     <div class="anim2">
-        <h1>pipewarp</h1>
+        <h1>kbx</h1>
     </div>
 
 
@@ -29,11 +29,9 @@
 <div class="list">
     <a target="_self" class="anim3" href="https://github.com/PipeWarp"> ./github.sh</a>
     <br><br>
-    <a target="_self" class="anim4" href="https://docs.pipewarp.co.uk">./docs.asm</a>
+    <a target="_self" class="anim4" href="https://docs.kbx.codes">./docs.asm</a>
     <br><br>
-    <a target="_self" class="anim5" href="https://vtc.pipewarp.co.uk">./vtc-site.html</a>
-    <br><br>
-    <a target="_self" class="anim5" href="https://twitter.com/PipeWarpDev">./twitter.bin</a>
+    <a target="_self" class="anim5" href="https://vtcteam.xyz">./vtc-site.html</a>
 
 </div>
 </body>
