--- a/index.html
+++ b/index.html
@@ -1,41 +1,152 @@
 <!DOCTYPE html>
-<a href="" style="text-decoration: none" > </a>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Martel+Sans:wght@200&display=swap" rel="stylesheet">
+<style>
+  body {
+    font-family: Arial;
+    margin: 0;
+  }
+  .header2 {
+    padding: 5px;
+    text-align: center;
+    color: white;
+    font-family: 'Major Mono Display', monospace;
+    font-size: 20px;
+    width:50%
+  }
+  .km{
+    top:50%
+  }
+  .header {
+    padding: 50px;
+    text-align: center;
+    color: white;
+    font-family: 'Major Mono Display', monospace;
+    font-size: 80px;
+  }
+  .wavy {
+    position: relative;
+  }
+  .wavy span {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    font-size: 2em;
+    text-transform: uppercase;
+    animation: animate 1s ease-in-out infinite;
+    animation-delay: calc(0.1s * var(--i));
+  }
+  @keyframes animate {
+    0% {
+      transform: translateY(0px);
+    }
+    20% {
+      transform: translateY(-20px);
+    }
+    40%,
+    100% {
+      transform: translateY(0px);
+    }
+  }
+</style>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>PipeWarp Website</title>
+    <title>kbx
+    </title>
     <link rel="stylesheet" href="css/styles.css" media="all">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/index.js"></script>
-</head>
-
-<body>
-<header>
-    <div class="anim1">
-        <h1>root@pipewarp.co.uk
-        <span class="white">:/$
-        <span class="typing"></span></span>
-        </h1>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js">
+    </script>
+    <script src="js/index.js">
+    </script>
+  </head>
+  <body>
+    <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%;background-color:#0d0d0d;box-shadow: 10px 0px 500px #353535;">
+      <div class="list" style="color:white">
+        <div class="header" >
+          kbx
+        </div>
+        <div class="wavy">
+          <span style="--i:1">i
+          </span>
+          <span style="--i:2">
+          </span>
+          <span style="--i:2">
+          </span>
+          <span style="--i:2">
+          </span>
+          <span style="--i:3">m
+          </span>
+          <span style="--i:4">a
+          </span>
+          <span style="--i:5">k
+          </span>
+          <span style="--i:6">e
+          </span>
+          <span style="--i:7">
+          </span>
+          <span style="--i:7">
+          </span>
+          <span style="--i:7">
+          </span>
+          <span style="--i:8">c
+          </span>
+          <span style="--i:9">o
+          </span>
+          <span style="--i:10">d
+          </span>
+          <span style="--i:12">e
+          </span>
+        </div>
+        <br>
+        <br>
+        <center>
+          <div class="header2" style="font-family: 'Martel Sans', sans-serif;">
+            i'm kdx. i create a bunch of open source projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.
+          </div>
+          <br>
+          <div class="header2" style="font-family: 'Martel Sans', sans-serif;">
+            on the right of this page are buttons leading to projects/accounts i have created.
+          </div>
+        </center>
+      </div>
+    </nav>
+    <div class="w3-main w3-padding-large" style="margin-left:40%;background-color#0000;top:25%;position: absolute;">
+      <div id="km">
+        <p align="center">
+          <a href="https://www.shadertoy.com/user/pipewarp">
+            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/shadertoy.png" alt="ShaderToy" width="300" height="100">
+          </a>
+          <a href="https://github.com/kb-x/LxDemOWin">
+            <img src="https://raw.githubusercontent.com/kb-x/LxDemOWin/main/brand/icon.png" alt="LxDemOWin" width="100" height="100">
+          </a>
+          <a href="https://github.com/kb-x/SimpleNFL">
+            <img src="https://raw.githubusercontent.com/kb-x/SimpleNFL/master/brand/icon.png" alt="SimpleNFL" width="100" height="100">
+          </a>
+          <a href="https://github.com/kb-x/QECI">
+            <img src="https://raw.githubusercontent.com/kb-x/QECI/master/brand/icon.png" alt="QECI" width="100" height="100">
+          </a>
+          <br>
+          <br>
+          <a href="https://github.com/kb-x/tinyhelloworld-linux">
+            <img src="https://raw.githubusercontent.com/kb-x/tinyhelloworld-linux/master/brand/icon.png" alt="TinyHelloWorld" width="100" height="100">
+          </a>
+          <a href="https://github.com/kb-x/uniprofile">
+            <img src="https://raw.githubusercontent.com/kb-x/uniprofile/master/brand/icon.png" alt="uniprofile" width="100" height="100">
+          </a>
+          <a href="https://github.com/kb-x/tdaw">
+            <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100">
+          </a>
+          <a href="https://kbx.codes">
+            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/wb.png" alt="website" width="300" height="100">
+          </a>
+        </p>
+        </h2>
     </div>
-    <div class="anim2">
-        <h1>pipewarp</h1>
     </div>
-
-
-
-
-
-</header>
-<div class="list">
-    <a target="_self" class="anim3" href="https://github.com/PipeWarp"> ./github.sh</a>
-    <br><br>
-    <a target="_self" class="anim4" href="https://docs.pipewarp.co.uk">./docs.asm</a>
-    <br><br>
-    <a target="_self" class="anim5" href="https://vtc.pipewarp.co.uk">./vtc-site.html</a>
-    <br><br>
-    <a target="_self" class="anim5" href="https://twitter.com/PipeWarpDev">./twitter.bin</a>
-
-</div>
+  </nav>
 </body>
-
 </html>
