--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <br>
         <center>
           <div class="header2" style="font-family: 'Martel Sans', sans-serif;">
-            i'm kdx. i create a bunch of open source projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.
+            i'm kbx. i create a bunch of open source projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.
           </div>
           <br>
           <div class="header2" style="font-family: 'Martel Sans', sans-serif;">
