--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100">
           </a>
           <a href="https://kbx.codes">
-            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/wb.png" alt="website" width="300" height="100">
+            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="github" width="300" height="100">
           </a>
         </p>
         </h2>
