--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <a href="https://github.com/kb-x/tdaw">
             <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100">
           </a>
-          <a href="https://kbx.codes">
+          <a href="https://github.com/kb-x">
             <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="github" width="300" height="100">
           </a>
         </p>
