--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<html class=" irahkvhor idc0_339" lang="en"><head><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Martel+Sans:wght@200&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&amp;display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&amp;family=Martel+Sans:wght@200&amp;display=swap" rel="stylesheet">
 <style>
   body {
     font-family: Arial;
@@ -52,8 +52,8 @@
     }
   }
 </style>
-<html lang="en">
-  <head>
+
+  
     <meta charset="UTF-8">
     <title>kbx
     </title>
@@ -69,7 +69,7 @@
   <body>
     <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%;background-color:#0d0d0d;box-shadow: 10px 0px 500px #353535;">
       <div class="list" style="color:white">
-        <div class="header" >
+        <div class="header">
           kbx
         </div>
         <div class="wavy">
@@ -147,8 +147,9 @@
             <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="github" width="300" height="100">
           </a>
         </p>
-        </h2>
+        
     </div>
     </div>
 
-</body>
+
+</body></html>
