--- a/index.html
+++ b/index.html
@@ -121,31 +121,23 @@
       <div id="km">
         <p align="center">
           <a href="https://www.shadertoy.com/user/pipewarp">
-            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/shadertoy.png" alt="ShaderToy" width="300" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/shadertoy.png" alt="ShaderToy" width="300" height="100"></a>
           <a href="https://github.com/kb-x/LxDemOWin">
-            <img src="https://raw.githubusercontent.com/kb-x/LxDemOWin/main/brand/icon.png" alt="LxDemOWin" width="100" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/LxDemOWin/main/brand/icon.png" alt="LxDemOWin" width="100" height="100"></a>
           <a href="https://github.com/kb-x/SimpleNFL">
-            <img src="https://raw.githubusercontent.com/kb-x/SimpleNFL/master/brand/icon.png" alt="SimpleNFL" width="100" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/SimpleNFL/master/brand/icon.png" alt="SimpleNFL" width="100" height="100"></a>
           <a href="https://github.com/kb-x/QECI">
-            <img src="https://raw.githubusercontent.com/kb-x/QECI/master/brand/icon.png" alt="QECI" width="100" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/QECI/master/brand/icon.png" alt="QECI" width="100" height="100"></a>
           <br>
           <br>
           <a href="https://github.com/kb-x/tinyhelloworld-linux">
-            <img src="https://raw.githubusercontent.com/kb-x/tinyhelloworld-linux/master/brand/icon.png" alt="TinyHelloWorld" width="100" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/tinyhelloworld-linux/master/brand/icon.png" alt="TinyHelloWorld" width="100" height="100"></a>
           <a href="https://github.com/kb-x/uniprofile">
-            <img src="https://raw.githubusercontent.com/kb-x/uniprofile/master/brand/icon.png" alt="uniprofile" width="100" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/uniprofile/master/brand/icon.png" alt="uniprofile" width="100" height="100"></a>
           <a href="https://github.com/kb-x/tdaw">
-            <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100"></a>
           <a href="https://github.com/kb-x">
-            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="github" width="300" height="100">
-          </a>
+            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="github" width="300" height="100"></a>
         </p>
         
     </div>
