--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <div class="header" >
           kbx
         </div>
+        <center>
         <div class="wavy">
           <span style="--i:1">i
           </span>
@@ -103,6 +104,7 @@
           </span>
           <span style="--i:12">e
           </span>
+          </center>
         </div>
         <br>
         <br>
@@ -115,7 +117,6 @@
             on the right of this page are buttons leading to projects/accounts i have created.
           </div>
         </center>
-      </div>
     </nav>
     <div class="w3-main w3-padding-large" style="margin-left:40%;background-color#0000;top:25%;position: absolute;">
       <div id="km">
