--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
           <a href="https://github.com/kb-x">
             <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="gh" width="300" height="100">
           </a>
+          <br>
+          <br>
+          <a href="https://blog.kbx.codes/">
+            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/blog.png" alt="blog" width="300" height="100">
+          </a>
+          <a href="https://docs.kbx.codes/">
+            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/docs.png" alt="docs" width="300" height="100">
+          </a>
         </p>
         
     </div></center>
