--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
           <a href="https://docs.kbx.codes/">
             <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/docs.png" alt="docs" width="300" height="100">
           </a>
+          <br>
+          <a href="https://github.com/kb-x/QECN">
+          <img src="https://raw.githubusercontent.com/kb-x/QECN/master/brand/icon.png" alt="qecn" width="100" height="100"/>
+          </a>
         </p>
         
     </div></center>
