gave website and readme a makeover

--- a/index.html
+++ b/index.html
@@ -1,167 +1,98 @@
 <!DOCTYPE html>
-<html class=" wksgcku idc0_339" lang="en"><head><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&amp;display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&amp;family=Martel+Sans:wght@200&amp;display=swap" rel="stylesheet">
-<style>
-  body {
-    font-family: Arial;
-    margin: 0;
-  }
-  .header2 {
-    padding: 5px;
-    text-align: center;
-    color: white;
-    font-family: 'Major Mono Display', monospace;
-    font-size: 20px;
-    width:50%
-  }
-  .km{
-    top:50%
-  }
-  .header {
-    padding: 50px;
-    text-align: center;
-    color: white;
-    font-family: 'Major Mono Display', monospace;
-    font-size: 80px;
-  }
-  .wavy {
-    position: relative;
-  }
-  .wavy span {
-    position: relative;
-    display: inline-block;
-    color: #fff;
-    font-size: 2em;
-    text-transform: uppercase;
-    animation: animate 1s ease-in-out infinite;
-    animation-delay: calc(0.1s * var(--i));
-  }
-  @keyframes animate {
-    0% {
-      transform: translateY(0px);
-    }
-    20% {
-      transform: translateY(-20px);
-    }
-    40%,
-    100% {
-      transform: translateY(0px);
-    }
-  }
-</style>
-
-  
+<html class=" wksgcku idc0_339" lang="en">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Open Sans', sans-serif;
+        margin: 0;
+      }
+      .text {
+        padding: 5px;
+        text-align: center;
+        color: white;
+        font-family: 'Open Sans', sans-serif;
+        letter-spacing: 1px;
+        font-size: 20px;
+        width:50%
+      }
+      .header {
+        padding: 50px;
+        text-align: center;
+        color: white;
+        font-family: 'Open Sans', sans-serif;
+        letter-spacing: 10px;
+        font-size: 80px;
+      }
+      div.horizontalgap {
+        float: right;
+        overflow: hidden;
+        height: 1px;
+        width: 0px;
+      }
+    </style>
     <meta charset="UTF-8">
     <title>kbx
     </title>
-    <link rel="stylesheet" href="css/styles.css" media="all">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js">
-    </script>
-    <link rel="stylesheet" href="css/styles.css" media="all">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
-  <body style="background-color:#000;">
-    <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%;background-color:#0d0d0d;box-shadow: 10px 0px 500px #353535;">
-      <div class="list" style="color:white">
-        <div class="header">
-          kbx
-        </div>
-        <center>
-        <div class="wavy">
-          <span style="--i:1">i
-          </span>
-          <span style="--i:2">
-          </span>
-          <span style="--i:2">
-          </span>
-          <span style="--i:2">
-          </span>
-          <span style="--i:3">m
-          </span>
-          <span style="--i:4">a
-          </span>
-          <span style="--i:5">k
-          </span>
-          <span style="--i:6">e
-          </span>
-          <span style="--i:7">
-          </span>
-          <span style="--i:7">
-          </span>
-          <span style="--i:7">
-          </span>
-          <span style="--i:8">c
-          </span>
-          <span style="--i:9">o
-          </span>
-          <span style="--i:10">d
-          </span>
-          <span style="--i:12">e
-          </span>
-          </div></center>
-        </div>
-        <br>
-        <br>
-        <center>
-          <div class="header2" style="font-family: 'Martel Sans', sans-serif;">
-            i'm kbx. i create a bunch of open source projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.
-          </div>
-          <br>
-          <div class="header2" style="font-family: 'Martel Sans', sans-serif;">
-            on the right of this page are buttons leading to projects/accounts i have created.
-          </div>
-        </center>
-    </nav>
-    <center><div class="w3-main w3-padding-large" style="margin-left:40%;background-color#0000;vertical-align:25%;">
-  <center>    
-  <div id="km">
-        <p align="center">
-          <a href="https://www.shadertoy.com/user/kbx">
-            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/shadertoy.png" alt="ShaderToy" width="300" height="100">
-          </a>
-          <a href="https://github.com/kb-x/LxDemOWin">
-            <img src="https://raw.githubusercontent.com/kb-x/LxDemOWin/main/brand/icon.png" alt="LxDemOWin" width="100" height="100">
-          </a>
-          <a href="https://github.com/kb-x/SimpleNFL">
-            <img src="https://raw.githubusercontent.com/kb-x/SimpleNFL/master/brand/icon.png" alt="SimpleNFL" width="100" height="100">
-          </a>
-          <a href="https://github.com/kb-x/QECI">
-            <img src="https://raw.githubusercontent.com/kb-x/QECI/master/brand/icon.png" alt="QECI" width="100" height="100">
-          </a>
-          <br>
-          <br>
-          <a href="https://github.com/kb-x/tinyhelloworld-linux">
-            <img src="https://raw.githubusercontent.com/kb-x/tinyhelloworld-linux/master/brand/icon.png" alt="TinyHelloWorld" width="100" height="100">
-          </a>
-          <a href="https://github.com/kb-x/uniprofile">
-            <img src="https://raw.githubusercontent.com/kb-x/uniprofile/master/brand/icon.png" alt="uniprofile" width="100" height="100">
-          </a>
-          <a href="https://github.com/kb-x/tdaw">
-            <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100">
-          </a>
-          <a href="https://github.com/kb-x">
-            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="gh" width="300" height="100">
-          </a>
-          <br>
-          <br>
-          <a href="https://blog.kbx.codes/">
-            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/blog.png" alt="blog" width="300" height="100">
-          </a>
-          <a href="https://docs.kbx.codes/">
-            <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/docs.png" alt="docs" width="300" height="100">
-          </a>
-          <br>
-           <br>
-          <a href="https://github.com/kb-x/QECN">
-          <img src="https://raw.githubusercontent.com/kb-x/QECN/master/brand/icon.png" alt="qecn" width="100" height="100"/>
-          </a>
-        </p>
-        
-    </div></center>
-  </div></center>
-
-
-</body>
+  <body style="background-color:#161616;">
+    <center>
+      <div class="header">kbx
+      </div>
+      <div class="text">i create a bunch of projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.
+      </div>
+      <br>
+      <br>
+      <div class="text">upcoming projects
+      </div>
+      <br>
+      <img src="brand/anban.png" alt="animatron" width="500" height="200"/>
+      <img src="brand/slban.png" alt="slush" width="500" height="200"/>
+      <br>
+      <br>
+      <div class="text">open source projects (clickable)
+      </div>
+      <br>
+      <!-- i apologise to everyone on behalf of my horrible html skills -->
+      <a href="https://www.shadertoy.com/user/kbx">
+        <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/shadertoy.png" alt="ShaderToy" width="300" height="100"/>
+      </a>
+      <a href="https://github.com/kb-x/LxDemOWin">
+        <img src="https://raw.githubusercontent.com/kb-x/LxDemOWin/main/brand/icon.png" alt="LxDemOWin" width="100" height="100"/>
+      </a>
+      <a href="https://github.com/kb-x/SimpleNFL">
+        <img src="https://raw.githubusercontent.com/kb-x/SimpleNFL/master/brand/icon.png" alt="SimpleNFL" width="100" height="100"/>
+      </a>
+      <a href="https://github.com/kb-x/QECI">
+        <img src="https://raw.githubusercontent.com/kb-x/QECI/master/brand/icon.png" alt="QECI" width="100" height="100"/>
+      </a>
+      <p style="height: 0px">
+      </p>
+      <a href="https://github.com/kb-x/tinyhelloworld-linux">
+        <img src="https://raw.githubusercontent.com/kb-x/tinyhelloworld-linux/master/brand/icon.png" alt="TinyHelloWorld" width="100" height="100"/>
+      </a>
+      <a href="https://github.com/kb-x/uniprofile">
+        <img src="https://raw.githubusercontent.com/kb-x/uniprofile/master/brand/icon.png" alt="uniprofile" width="100" height="100"/>
+      </a>
+      <a href="https://github.com/kb-x/tdaw">
+        <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100"/>
+      </a>
+      <a href="https://kbx.codes">
+        <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/wb.png" alt="website" width="300" height="100"/>
+      </a>
+      <p style="height: 0px">
+      </p>
+      <a href="https://docs.kbx.codes/">
+        <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/docs.png" alt="docs" width="300" height="100">
+      </a>
+      <a href="https://github.com/kb-x/QECN">
+        <img src="https://raw.githubusercontent.com/kb-x/QECN/master/brand/icon.png" alt="qecn" width="100" height="100"/>
+      </a>
+      <div class="horizontalgap" style="width:200px">
+      </div>
+      <p style="height: 10px">
+      </p>
+    </center>
+  </body>
