added more projects/filler

--- a/index.html
+++ b/index.html
@@ -39,21 +39,19 @@
   </head>
   <body style="background-color:#161616;">
     <center>
-      <div class="header">kbx
-      </div>
-      <div class="text">i create a bunch of projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.
-      </div>
+      <div class="header">kbx</div>
+      <div class="text">i create a bunch of projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.</div>
       <br>
       <br>
-      <div class="text">upcoming projects
-      </div>
+      <div class="text">upcoming projects</div>
       <br>
       <img src="brand/anban.png" alt="animatron" width="500" height="200"/>
       <img src="brand/slban.png" alt="slush" width="500" height="200"/>
       <br>
+      <img src="brand/dtban.png" alt="deadtext" width="500" height="200"/>
+      <img src="brand/csban.png" alt="mcs" width="500" height="200"/>
       <br>
-      <div class="text">open source projects (clickable)
-      </div>
+      <div class="text">open source projects (clickable)</div>
       <br>
       <!-- i apologise to everyone on behalf of my horrible html skills -->
       <a href="https://www.shadertoy.com/user/kbx">
