modify web logo and readme

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
   </head>
   <body style="background-color:#161616;">
     <center>
-      <div class="header">kbx</div>
+      <br><br><br>
+      <img src="brand/tlg.png" alt="logo" width="394" height="115" style="image-rendering: pixelated; image-rendering: -moz-crisp-edges;"/>
+      <br><br><br>
       <div class="text">i create a bunch of projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.</div>
-      <br>
-      <br>
+      <br><br>
       <div class="text">upcoming projects</div>
       <br>
       <img src="brand/anban.png" alt="animatron" width="500" height="200"/>
