--- a/index.html
+++ b/index.html
@@ -1,97 +1,111 @@
 <!DOCTYPE html>
 <html class=" wksgcku idc0_339" lang="en">
-  <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Open Sans', sans-serif;
-        margin: 0;
-      }
-      .text {
-        padding: 5px;
-        text-align: center;
-        color: white;
-        font-family: 'Open Sans', sans-serif;
-        letter-spacing: 1px;
-        font-size: 20px;
-        width:50%
-      }
-      .header {
-        padding: 50px;
-        text-align: center;
-        color: white;
-        font-family: 'Open Sans', sans-serif;
-        letter-spacing: 10px;
-        font-size: 80px;
-      }
-      div.horizontalgap {
-        float: right;
-        overflow: hidden;
-        height: 1px;
-        width: 0px;
-      }
-    </style>
-    <meta charset="UTF-8">
-    <title>kbx
-    </title>
-  </head>
-  <body style="background-color:#161616;">
-    <center>
-      <br><br><br>
-      <img src="brand/tlg.png" alt="logo" width="306.5" height="115" style="image-rendering: pixelated; image-rendering: -moz-crisp-edges;"/>
-      <br><br><br>
-      <div class="text">i create a bunch of projects for people to use freely. anything i create always go under the simple guidline that size, speed and stability are a top priority.</div>
-      <br><br>
-      <div class="text">upcoming projects</div>
-      <br>
-      <img src="brand/anban.png" alt="animatron" width="500" height="200"/>
-      <img src="brand/slban.png" alt="slush" width="500" height="200"/>
-      <br>
-      <img src="brand/dtban.png" alt="deadtext" width="500" height="200"/>
-      <img src="brand/csban.png" alt="mcs" width="500" height="200"/>
-      <br>
-      <div class="text">open source projects (clickable)</div>
-      <br>
-      <!-- i apologise to everyone on behalf of my horrible html skills -->
-      <a href="https://www.shadertoy.com/user/kbx">
-        <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/shadertoy.png" alt="ShaderToy" width="300" height="100"/>
-      </a>
-      <a href="https://github.com/kb-x/LxDemOWin">
-        <img src="https://raw.githubusercontent.com/kb-x/LxDemOWin/main/brand/icon.png" alt="LxDemOWin" width="100" height="100"/>
-      </a>
-      <a href="https://github.com/kb-x/SimpleNFL">
-        <img src="https://raw.githubusercontent.com/kb-x/SimpleNFL/master/brand/icon.png" alt="SimpleNFL" width="100" height="100"/>
-      </a>
-      <a href="https://github.com/kb-x/QECI">
-        <img src="https://raw.githubusercontent.com/kb-x/QECI/master/brand/icon.png" alt="QECI" width="100" height="100"/>
-      </a>
-      <p style="height: 0px">
-      </p>
-      <a href="https://github.com/kb-x/tinyhelloworld-linux">
-        <img src="https://raw.githubusercontent.com/kb-x/tinyhelloworld-linux/master/brand/icon.png" alt="TinyHelloWorld" width="100" height="100"/>
-      </a>
-      <a href="https://github.com/kb-x/uniprofile">
-        <img src="https://raw.githubusercontent.com/kb-x/uniprofile/master/brand/icon.png" alt="uniprofile" width="100" height="100"/>
-      </a>
-      <a href="https://github.com/kb-x/tdaw">
-        <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100"/>
-      </a>
-      <a href="https://github.com/kb-x">
-        <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="github" width="300" height="100"/>
-      </a>
-      <p style="height: 0px">
-      </p>
-      <a href="https://docs.kbx.codes/">
-        <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/docs.png" alt="docs" width="300" height="100">
-      </a>
-      <a href="https://github.com/kb-x/QECN">
-        <img src="https://raw.githubusercontent.com/kb-x/QECN/master/brand/icon.png" alt="qecn" width="100" height="100"/>
-      </a>
-      <div class="horizontalgap" style="width:200px">
-      </div>
-      <p style="height: 10px">
-      </p>
-    </center>
-  </body>
+
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      margin: 0;
+    }
+
+    .text {
+      padding: 5px;
+      text-align: center;
+      color: white;
+      font-family: 'Open Sans', sans-serif;
+      letter-spacing: 1px;
+      font-size: 20px;
+      width: 50%
+    }
+
+    .header {
+      padding: 50px;
+      text-align: center;
+      color: white;
+      font-family: 'Open Sans', sans-serif;
+      letter-spacing: 10px;
+      font-size: 80px;
+    }
+
+    div.horizontalgap {
+      float: right;
+      overflow: hidden;
+      height: 1px;
+      width: 0px;
+    }
+  </style>
+  <meta charset="UTF-8">
+  <title>kbx
+  </title>
+</head>
+
+<body style="background-color:#161616;">
+  <center>
+    <br><br><br>
+    <img src="brand/tlg.png" alt="logo" width="306.5" height="115"
+      style="image-rendering: pixelated; image-rendering: -moz-crisp-edges;" />
+    <br><br><br>
+    <div class="text">i create a bunch of projects for people to use freely. anything i create always go under the
+      simple guidline that size, speed and stability are a top priority.</div>
+    <br><br>
+    <div class="text">upcoming projects</div>
+    <br>
+    <img src="brand/anban.png" alt="animatron" width="500" height="200" />
+    <img src="brand/slban.png" alt="slush" width="500" height="200" />
+    <br>
+    <img src="brand/dtban.png" alt="deadtext" width="500" height="200" />
+    <img src="brand/csban.png" alt="mcs" width="500" height="200" />
+    <br>
+    <div class="text">open source projects (clickable)</div>
+    <br>
+    <!-- i apologise to everyone on behalf of my horrible html skills -->
+    <a href="https://www.shadertoy.com/user/kbx">
+      <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/shadertoy.png" alt="ShaderToy" width="300" height="100" />
+    </a>
+    <a href="https://github.com/kb-x/LxDemOWin">
+      <img src="https://raw.githubusercontent.com/kb-x/LxDemOWin/main/brand/icon.png" alt="LxDemOWin" width="100" height="100" />
+    </a>
+    <a href="https://github.com/kb-x/SimpleNFL">
+      <img src="https://raw.githubusercontent.com/kb-x/SimpleNFL/master/brand/icon.png" alt="SimpleNFL" width="100" height="100" />
+    </a>
+    <a href="https://github.com/kb-x/QECI">
+      <img src="https://raw.githubusercontent.com/kb-x/QECI/master/brand/icon.png" alt="QECI" width="100" height="100" />
+    </a>
+
+    <p style="height: 0px">
+    </p>
+    <a href="https://github.com/kb-x/tinyhelloworld-linux">
+      <img src="https://raw.githubusercontent.com/kb-x/tinyhelloworld-linux/master/brand/icon.png" alt="TinyHelloWorld" width="100" height="100" />
+    </a>
+    <a href="https://github.com/kb-x/uniprofile">
+      <img src="https://raw.githubusercontent.com/kb-x/uniprofile/master/brand/icon.png" alt="uniprofile" width="100" height="100" />
+    </a>
+    <a href="https://github.com/kb-x/tdaw">
+      <img src="https://raw.githubusercontent.com/kb-x/tdaw/master/brand/icon.png" alt="tdaw" width="100" height="100" />
+    </a>
+    <a href="https://github.com/kb-x">
+      <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/gh.png" alt="github" width="300" height="100"/>
+    </a>
+    
+    <p style="height: 0px">
+    </p>
+    <a href="https://docs.kbx.codes/">
+      <img src="https://raw.githubusercontent.com/kb-x/kb-x/main/brand/docs.png" alt="docs" width="300" height="100">
+    </a>
+    <a href="https://github.com/kb-x/QECN">
+      <img src="https://raw.githubusercontent.com/kb-x/QECN/master/brand/icon.png" alt="qecn" width="100" height="100" />
+    </a>
+    <a href="https://github.com/kb-x/dpgtk">
+      <img src="https://raw.githubusercontent.com/kb-x/dpgtk/master/brand/icon.png" alt="dpgtk" width="100" height="100" />
+    </a>
+
+    
+    <div class="horizontalgap" style="width:105px">
+    </div>
+    <p style="height: 10px">
+    </p>
+  </center>
+</body>
