stopped people right clicking

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <script>document.addEventListener('contextmenu', event => event.preventDefault());</script>
   <meta charset="UTF-8">
   <title>kbx
   </title>
