fixed your code you nincompoop. learn css for the love of god.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class=" wksgcku idc0_339" lang="en">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
   <script>document.addEventListener('contextmenu', event => event.preventDefault());</script>
   <meta charset="UTF-8">
   <title>kbx
@@ -10,19 +10,15 @@
 </head>
 
 <body class="sliding-background">
-    <massivespacing></massivespacing>
-    <img src="brand/tlg.png" alt="logo" width="306.5" height="115" draggable="false" />
-    <h1 style="height: 20px;">i write code</h1>
-    <h5 >(and do lots of other things too)</h5>
-    <spacing></spacing>
+  <img src="brand/tlg.png" alt="logo" width="306.5" height="115" draggable="false" />
+  <h1 style="height: 20px;">i write code</h1>
+  <h5>(and do lots of other things too)</h5>
 
-
-    <text class="right">demo related stuff will go here</text>
-    <text>i make stuff, look on my </text><a href="https://github.com/kb-x">github</a><text> for it</text>
-    <text class="right">(i'll make something eventually)</text>
-    <bigspacing></bigspacing>
-
-    <text>i also make music </text><a href="https://cytrs.xyz">here</a>
+  <p class="right text">demo related stuff will go here</p>
+  <p class="text">i make stuff, look on my <a href="https://github.com/kb-x">github</a> for it</p>
+  <p class="right text">(i'll make something eventually) </br>
+    i also make music <a href="https://cytrs.xyz">here</a></p>
 
 </body>
+
 </html>
