--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body class="sliding-background">
-  <img src="brand/tlg.png" alt="logo" width="306.5" height="115" draggable="false" />
+  <img src="tlg.png" alt="logo" width="306.5" height="115" draggable="false" />
   <h1 style="height: 20px;">i write code</h1>
   <h5>(and do lots of other things too)</h5>
 
 
   <div class="main-grid">
     <div>
-      <p class="text">i make stuff, look on my <a href="https://github.com/kb-x">github</a> for it</p>
+      <p class="text">i make stuff, look on my <a href="https://github.com/ppekko">github</a> for it</p>
       <p>i also make music <a href="https://cytrs.xyz">here</a></p>
     </div>
 
