--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <script>document.addEventListener('contextmenu', event => event.preventDefault());</script>
   <meta charset="UTF-8">
-  <title>kbx
+  <title>pipe
   </title>
 </head>
 
