--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="sliding-background">
   <img src="tlg.png" alt="logo" width="306.5" height="115" draggable="false" />
-  <h1 style="height: 20px;">i write code</h1>
+  <h1 style="height: 20px;margin-bottom: 50px;">jack of all trades master of some</h1>
   <h5>(and do lots of other things too)</h5>
 
 
