--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
-<html class=" wksgcku idc0_339" lang="en">
 
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <script>document.addEventListener('contextmenu', event => event.preventDefault());</script>
+  <script src="js/wavy.js"></script>
   <meta charset="UTF-8">
-  <title>pipe
-  </title>
+  <title>pipe</title>
+
 </head>
 
 <body class="sliding-background">
   <img src="tlg.png" alt="logo" width="306.5" height="115" draggable="false" />
-  <h1 style="height: 20px;margin-bottom: 50px;">jack of all trades master of some</h1>
+  <!-- Javascipt magic -->
+  <h1  class="wave" style="height: 20px;margin-bottom: 50px;">i write code</h1>
   <h5>(and do lots of other things too)</h5>
-
 
   <div class="main-grid">
     <div>
       <p class="text">i make stuff, look on my <a href="https://github.com/ppekko">github</a> for it</p>
       <p>i also make music <a href="https://cytrs.xyz">here</a></p>
     </div>
-
-    <div class="right">
-      <p class="text">demo related stuff will go here</br>
-      (i'll make something eventually)</p>
-    </div>
   </div>
 
-
 </body>
+
 
 </html>
