added cool stuff

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <body class="sliding-background">
   <img src="tlg.png" alt="logo" width="306.5" height="115" draggable="false" />
   <!-- Javascipt magic -->
-  <h1  class="wave" style="height: 20px;margin-bottom: 50px;">i write code</h1>
-  <h5>(and do lots of other things too)</h5>
+  <h1  class="wave" style="margin-bottom: 40px;">loading message...</h1>
+
+  <p style="margin-bottom: 200px;">i'm fellow netizen who writes code, music and also some other things on the side<p>
+
+  <p>currently working on a DAW, stay tuned!</a>
+
+  <p><a href="https://manesutoa.dev">check out manesutoa</a> for more cool stuff</p>
 
 </body>
 
